# Chessable

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: AVL.h  Hash.h  List.h  Parser.h  WorldCup2021.pgn  main.cpp  main_entry.cpp  pgndata.txt
src/app/: cli_runner.cpp  cli_runner.h  config_parser.cpp  config_parser.h  menu_controller.cpp  menu_controller.h  run_chessable_cli.h
src/cli/: menu.cpp  menu.h
src/common/: pgn_utils.cpp  pgn_utils.h
src/domain/: chess_database.h  chess_types.cpp  chess_types.h
src/ingest/: database_loader.cpp  database_loader.h
src/pgnlib/: PGNMove.cpp  PGNMove.h  PGNMoveList.cpp  PGNMoveList.h  PGNPly.cpp  example5.cpp  example6.cpp  example7.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
src/query/: chess_queries.cpp  chess_queries.h  query_service.cpp  query_service.h
tests/: ds_smoke_tests.cpp
